feat: добавить учёт дивидендов и логику фонда ликвидности в бэктест ребалансировки
- Переименован тест MultiAssetRebalanceBacktest в MultiAssetTmonRebalanceBacktest.
- Интегрирован DividendsComponent для получения и учёта дивидендных выплат по активу A.
- Реализована синхронизация баров через вынесенный метод alignBarSeries.
- Обновлена логика симуляции: учтена комиссия, добавлена автоматическая покупка/продажа инструмента ликвидности (TMON) для управления кэшем без плеча.
- Расширена визуализация: добавлено отображение дивидендов, изменены цвета серий, обновлено имя файла результата.
- Добавлен статический метод getInstance в DividendsComponent для создания экземпляра из конфигурации.