@@ -1,5 +1,6 @@
 package com.github.tink_api_with_charts;
 
+import com.github.tink_api_with_charts.component.DividendsComponent;
 import org.jfree.chart.ChartFactory;
 import org.jfree.chart.ChartPanel;
 import org.jfree.chart.ChartUtils;
@@ -25,33 +26,40 @@ import ru.ttech.piapi.strategy.candle.backtest.CandleStrategyBacktestConfigurati
 import javax.swing.*;
 import java.awt.*;
 import java.io.File;
+import java.time.Instant;
 import java.time.LocalDate;
-import java.time.ZoneId;
+import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
-public class MultiAssetRebalanceBacktest {
+public class MultiAssetTmonRebalanceBacktest {
 
     public static final CandleInterval CANDLE_INTERVAL = CandleInterval.CANDLE_INTERVAL_4_HOUR;
     public static final LocalDate DATE_FROM = LocalDate.of(2025, 1, 1);
     public static final LocalDate DATE_TO = LocalDate.of(2026, 6, 23);
-    private static final Logger log = LoggerFactory.getLogger(MultiAssetRebalanceBacktest.class);
+    private static final Logger log = LoggerFactory.getLogger(MultiAssetTmonRebalanceBacktest.class);
 
     // ⚙️ ПАРАМЕТРЫ ПОРТФЕЛЯ
     private static final double INITIAL_CAPITAL = 1_000_000.0;
-    private static final double TARGET_ALLOC_A = 0.33; // 50% Актив A
-    private static final double TARGET_ALLOC_B = 0.33; // 50% Актив B
+    private static final double TARGET_ALLOC_A = 0.50; // 50% Актив A
+    //    private static final double TARGET_ALLOC_B = 0.33; // 50% Актив B
     private static final double REBALANCE_THRESHOLD = 0.01; // ±1% порог
+    private static final double FEE = 0.0025; // Комиссия за транзакцию
     private static final String INSTRUMENT_UID_A = "e6123145-9665-43e0-8413-cd61b8aa9b13";  // sber
-//    private static final String INSTRUMENT_UID_A = "87db07bc-0e02-4e29-90bb-05e8ef791d7b"; //T
+    //    private static final String INSTRUMENT_UID_A = "87db07bc-0e02-4e29-90bb-05e8ef791d7b"; //T
     private static final String INSTRUMENT_UID_B = "498ec3ff-ef27-4729-9703-a5aac48d5789"; // TMON
+//    private static final String INSTRUMENT_UID_B = "a240edc6-a605-44b3-9801-37b9f7c3d1ff"; // LQDT
+//
 
     public static void main(String[] args) {
         var configuration = ConnectorConfiguration.loadPropertiesFromFile("config/application.yml");
         var backtestStrategyFactory = BacktestStrategyFactory.create(configuration);
+        DividendsComponent dividendsComponent = DividendsComponent.getInstance(configuration);
         var executorService = Executors.newSingleThreadExecutor();
 
         try {
@@ -60,30 +68,14 @@ public class MultiAssetRebalanceBacktest {
             BarSeries seriesB = getBarSeries(backtestStrategyFactory, INSTRUMENT_UID_B, executorService);
             System.out.println("seriesA.getBarCount() = " + seriesA.getBarCount());
             System.out.println("seriesB.getBarCount() = " + seriesB.getBarCount());
-            int a = 0, b = 0;
             List<Bar> alignedBarsA = new ArrayList<>();
             List<Bar> alignedBarsB = new ArrayList<>();
-            while (a < seriesA.getBarCount() && b < seriesB.getBarCount()) {
-                Bar aBar = seriesA.getBar(a);
-                Bar bBar = seriesB.getBar(b);
-                if (aBar.getBeginTime().isAfter(bBar.getBeginTime())) {
-                    b++;
-                } else if (aBar.getBeginTime().isBefore(bBar.getBeginTime())) {
-                    a++;
-                } else {
-                    alignedBarsA.add(aBar);
-                    alignedBarsB.add(bBar);
-                    a++;
-                    b++;
-                }
-            }
-            if (alignedBarsA.size() != alignedBarsB.size()) {
-                throw new IllegalStateException("📉 Серии не синхронизированы по длине: A=" + seriesA.getBarCount() + ", B=" + seriesB.getBarCount());
-            }
+            alignBarSeries(seriesA, seriesB, alignedBarsA, alignedBarsB);
+            Map<LocalDate, Double> dateToDividendsMap = dividendsComponent.getDateToDividendsMap(INSTRUMENT_UID_A, DATE_FROM, DATE_TO);
 
-            visualizeTwoAssetPrices(alignedBarsA, alignedBarsB);
+//            visualizeTwoAssetPrices(alignedBarsA, alignedBarsB);
             // 🔍 Запуск многоактивного симулятора
-//            simulateMultiAssetPortfolio(seriesA, seriesB);
+            simulateMultiAssetPortfolio(alignedBarsA, alignedBarsB, dateToDividendsMap);
 
         } catch (Exception e) {
             log.error("❌ Backtest failed", e);
@@ -100,29 +92,50 @@ public class MultiAssetRebalanceBacktest {
         }
     }
 
+    private static void alignBarSeries(BarSeries seriesA, BarSeries seriesB, List<Bar> alignedBarsA, List<Bar> alignedBarsB) {
+        int a = 0, b = 0;
+        while (a < seriesA.getBarCount() && b < seriesB.getBarCount()) {
+            Bar aBar = seriesA.getBar(a);
+            Bar bBar = seriesB.getBar(b);
+            if (aBar.getBeginTime().isAfter(bBar.getBeginTime())) {
+                b++;
+            } else if (aBar.getBeginTime().isBefore(bBar.getBeginTime())) {
+                a++;
+            } else {
+                alignedBarsA.add(aBar);
+                alignedBarsB.add(bBar);
+                a++;
+                b++;
+            }
+        }
+        if (alignedBarsA.size() != alignedBarsB.size()) {
+            throw new IllegalStateException("📉 Серии не синхронизированы по длине: A=" + seriesA.getBarCount() + ", B=" + seriesB.getBarCount());
+        }
+    }
+
     private static BarSeries getBarSeries(BacktestStrategyFactory backtestStrategyFactory, String instrumentUid, ExecutorService executorService) {
         BarSeriesManager[] seriesAArray = new BarSeriesManager[1];
         backtestStrategyFactory.newCandleStrategyBacktest(
-                CandleStrategyBacktestConfiguration.builder()
-                        .setInstrumentId(instrumentUid)
-                        .setCandleInterval(CANDLE_INTERVAL)
-                        .setFrom(DATE_FROM)
-                        .setTo(DATE_TO)
-                        .setTradeExecutionModel(new TradeOnCurrentCloseModel())
-                        .setTradeFeeModel(new LinearTransactionCostModel(0.0025))
-                        .setExecutorService(executorService)
-                        .setStrategyAnalysis(barSeriesManager ->
-                                seriesAArray[0] = barSeriesManager)
-                        .build())
+                        CandleStrategyBacktestConfiguration.builder()
+                                .setInstrumentId(instrumentUid)
+                                .setCandleInterval(CANDLE_INTERVAL)
+                                .setFrom(DATE_FROM)
+                                .setTo(DATE_TO)
+                                .setTradeExecutionModel(new TradeOnCurrentCloseModel())
+                                .setTradeFeeModel(new LinearTransactionCostModel(0.0025))
+                                .setExecutorService(executorService)
+                                .setStrategyAnalysis(barSeriesManager ->
+                                        seriesAArray[0] = barSeriesManager)
+                                .build())
                 .run();
         BarSeries seriesA = seriesAArray[0].getBarSeries();
         return seriesA;
     }
 
-    private static void simulateMultiAssetPortfolio(BarSeries seriesA, BarSeries seriesB) {
+    private static void simulateMultiAssetPortfolio(List<Bar> barsA, List<Bar> barsB, Map<LocalDate, Double> dateToDividendsMap) {
         double cash = INITIAL_CAPITAL;
         int sharesA = 0, sharesB = 0;
-        
+
         // 📊 Коллекторы для визуализации
         List<Long> timestamps = new ArrayList<>();
         List<Double> pricesA = new ArrayList<>();
@@ -130,13 +143,23 @@ public class MultiAssetRebalanceBacktest {
         List<Double> equity = new ArrayList<>();
         List<String> trades = new ArrayList<>();
 
-        for (int i = 0; i < seriesA.getBarCount(); i++) {
-            double priceA = seriesA.getBar(i).getClosePrice().doubleValue();
-            double priceB = seriesB.getBar(i).getClosePrice().doubleValue();
-            
-            timestamps.add(seriesA.getBar(i).getBeginTime().atZone(ZoneId.systemDefault()).toInstant().toEpochMilli());
+        for (int i = 0; i < barsA.size(); i++) {
+            double priceA = barsA.get(i).getClosePrice().doubleValue();
+            double priceB = barsB.get(i).getClosePrice().doubleValue();
+
+            Instant barInstant = barsA.get(i).getBeginTime().atZone(ZoneOffset.UTC).toInstant();
+            LocalDate barDate = LocalDate.ofInstant(barInstant, ZoneOffset.UTC);
+            timestamps.add(barInstant.getEpochSecond());
             pricesA.add(priceA);
             pricesB.add(priceB);
+
+            StringBuilder tradeBuilder = new StringBuilder();
+            cash += Optional.ofNullable(dateToDividendsMap.remove(barDate))
+                    .map(aDouble -> {
+                        tradeBuilder.append("DIVS");
+                        return aDouble;
+                    })
+                    .orElse(0.0); // Добавляем дивиденды, если была выплата
 
             double valA = sharesA * priceA;
             double valB = sharesB * priceB;
@@ -145,54 +168,48 @@ public class MultiAssetRebalanceBacktest {
 
             if (totalValue <= 0) continue;
             double allocA = valA / totalValue;
-            double allocB = valB / totalValue;
 
             // 🔁 Ребалансировка Актив A
             if (allocA >= TARGET_ALLOC_A + REBALANCE_THRESHOLD) {
                 double targetValA = totalValue * TARGET_ALLOC_A;
                 int toSellA = (int) Math.floor((valA - targetValA) / priceA);
                 if (toSellA > 0) {
-                    cash += toSellA * priceA;
+                    cash += (toSellA * priceA) * (1 - FEE);
                     sharesA -= toSellA;
-                    trades.add("SELL_A");
+                    tradeBuilder.append("SELL_A");
                 }
             } else if (allocA <= TARGET_ALLOC_A - REBALANCE_THRESHOLD) {
                 double targetValA = totalValue * TARGET_ALLOC_A;
                 int toBuyA = (int) Math.floor((targetValA - valA) / priceA);
                 if (toBuyA > 0) {
-                    cash -= toBuyA * priceA;
+                    cash -= (toBuyA * priceA * (1 + FEE));
                     sharesA += toBuyA;
-                    trades.add("BUY_A");
+                    tradeBuilder.append("BUY_A");
                 }
             }
-
-            // 🔁 Ребалансировка Актив B
-            if (allocB >= TARGET_ALLOC_B + REBALANCE_THRESHOLD) {
-                double targetValB = totalValue * TARGET_ALLOC_B;
-                int toSellB = (int) Math.floor((valB - targetValB) / priceB);
-                if (toSellB > 0) {
-                    cash += toSellB * priceB;
-                    sharesB -= toSellB;
-                    trades.add("SELL_B");
-                }
-            } else if (allocB <= TARGET_ALLOC_B - REBALANCE_THRESHOLD) {
-                double targetValB = totalValue * TARGET_ALLOC_B;
-                int toBuyB = (int) Math.floor((targetValB - valB) / priceB);
-                if (toBuyB > 0) {
-                    cash -= toBuyB * priceB;
-                    sharesB += toBuyB;
-                    trades.add("BUY_B");
-                }
+            if (cash < 0) { // продаём Фонд ликвидности, чтобы не брать плечо
+                int toSellB = (int) Math.ceil((-cash) / priceB);
+                cash += (toSellB * priceB) * (1 - FEE);
+                sharesB -= toSellB;
+            } else if (cash > 0) { // покупаем Фонд ликвидности на свободные средства
+                int toBuyB = (int) Math.floor(cash / priceB);
+                cash -= (toBuyB * priceB * (1 - FEE));
+                sharesB += toBuyB;
             }
+            trades.add(tradeBuilder.toString());
         }
 
-        double finalEquity = equity.isEmpty() ? INITIAL_CAPITAL : equity.get(equity.size() - 1);
+        long tradesCount = trades.stream()
+                .filter(s -> !s.isEmpty())
+                .count();
+
+        double finalEquity = equity.isEmpty() ? INITIAL_CAPITAL : equity.getLast();
         log.info("✅ Multi-Asset Rebalance Complete");
         log.info("💰 Net PnL: {:.2f} | 📈 Return: {:.2f}% | 📦 Trades: {}",
-                finalEquity - INITIAL_CAPITAL, (finalEquity / INITIAL_CAPITAL - 1) * 100, trades.size());
-        log.info("📊 Final: Cash={:.2f}, A={:.2f}₽, B={:.2f}₽", cash, sharesA * pricesA.get(pricesA.size()-1), sharesB * pricesB.get(pricesB.size()-1));
+                finalEquity - INITIAL_CAPITAL, (finalEquity / INITIAL_CAPITAL - 1) * 100, tradesCount);
+        log.info("📊 Final: Cash={:.2f}, A={:.2f}₽, B={:.2f}₽", cash, sharesA * pricesA.getLast(), sharesB * pricesB.getLast());
 
-//        visualizeMultiAsset(timestamps, pricesA, pricesB, equity, trades);
+        visualizeMultiAsset(timestamps, barsA, barsB, equity, trades);
     }
 
     private static void visualizeMultiAsset(List<Long> timestamps, List<Bar> barsA, List<Bar> barsB,
@@ -202,6 +219,7 @@ public class MultiAssetRebalanceBacktest {
         XYSeries equitySeries = new XYSeries("Портфель");
         XYSeries buySeries = new XYSeries("Покупки");
         XYSeries sellSeries = new XYSeries("Продажи");
+        XYSeries dividendSeries = new XYSeries("Дивиденды");
 
         for (int i = 0; i < barsA.size(); i++) {
             Bar aBar = barsA.get(i);
@@ -213,6 +231,9 @@ public class MultiAssetRebalanceBacktest {
             String t = trades.get(i);
             if (t.contains("BUY")) buySeries.add(second, equity.get(i));
             else if (t.contains("SELL")) sellSeries.add(second, equity.get(i));
+            if (t.contains("DIVS")) {
+                dividendSeries.add(second, equity.get(i));
+            }
         }
 
         var dataset = new XYSeriesCollection();
@@ -221,11 +242,12 @@ public class MultiAssetRebalanceBacktest {
         dataset.addSeries(equitySeries);
         dataset.addSeries(buySeries);
         dataset.addSeries(sellSeries);
+        dataset.addSeries(dividendSeries);
 
         JFreeChart chart = ChartFactory.createXYLineChart(
-            "Multi-Asset 50/50 | PnL: " + String.format("%.2f", equity.get(equity.size()-1) - INITIAL_CAPITAL),
-            "Время (ms)", "Цена/Портфель (₽)", dataset,
-            PlotOrientation.VERTICAL, true, true, false);
+                "Multi-Asset 50/50 | PnL: " + String.format("%.2f", equity.get(equity.size()-1) - INITIAL_CAPITAL),
+                "Время (ms)", "Цена/Портфель (₽)", dataset,
+                PlotOrientation.VERTICAL, true, true, false);
 
         XYPlot plot = chart.getXYPlot();
         NumberAxis primaryAxis = new NumberAxis("Цена/Акции (₽)");
@@ -238,24 +260,31 @@ public class MultiAssetRebalanceBacktest {
         plot.setDataset(2, new XYSeriesCollection(equitySeries));
         plot.setDataset(3, new XYSeriesCollection(buySeries));
         plot.setDataset(4, new XYSeriesCollection(sellSeries));
+        plot.setDataset(5, new XYSeriesCollection(dividendSeries));
 
         plot.mapDatasetToRangeAxis(0, 0);
         plot.mapDatasetToRangeAxis(1, 0);
         plot.mapDatasetToRangeAxis(2, 1);
         plot.mapDatasetToRangeAxis(3, 1);
         plot.mapDatasetToRangeAxis(4, 1);
+        plot.mapDatasetToRangeAxis(5, 1);
 
         XYLineAndShapeRenderer prA = new XYLineAndShapeRenderer(); prA.setSeriesPaint(0, Color.BLUE);
         XYLineAndShapeRenderer prB = new XYLineAndShapeRenderer(); prB.setSeriesPaint(0, Color.MAGENTA);
-        XYLineAndShapeRenderer prE = new XYLineAndShapeRenderer(); prE.setSeriesPaint(0, Color.GREEN);
-        XYLineAndShapeRenderer trB = new XYLineAndShapeRenderer(); trB.setSeriesPaint(0, Color.RED);
-        XYLineAndShapeRenderer trS = new XYLineAndShapeRenderer(); trS.setSeriesPaint(0, Color.ORANGE);
+        XYLineAndShapeRenderer prE = new XYLineAndShapeRenderer(); prE.setSeriesPaint(0, Color.CYAN);
+        XYLineAndShapeRenderer trB = new XYLineAndShapeRenderer(); trB.setSeriesPaint(0, Color.GREEN);
+        XYLineAndShapeRenderer trS = new XYLineAndShapeRenderer(); trS.setSeriesPaint(0, Color.RED);
+        XYLineAndShapeRenderer trD = new XYLineAndShapeRenderer(); trD.setSeriesPaint(0, Color.PINK);
 
-        plot.setRenderer(0, prA); plot.setRenderer(1, prB); plot.setRenderer(2, prE);
-        plot.setRenderer(3, trB); plot.setRenderer(4, trS);
+        plot.setRenderer(0, prA);
+        plot.setRenderer(1, prB);
+        plot.setRenderer(2, prE);
+        plot.setRenderer(3, trB);
+        plot.setRenderer(4, trS);
+        plot.setRenderer(5, trD);
 
         try {
-            ChartUtils.saveChartAsPNG(new File("backtest_multiasset.png"), chart, 1600, 900);
+            ChartUtils.saveChartAsPNG(new File("backtest_multiasset_lqdt.png"), chart, 1600, 900);
         } catch (Exception ignored) {}
 
         SwingUtilities.invokeLater(() -> {
